# fileBoxes

./: CMakeLists.txt  README  install.sh  update.sh
app_fileboxes/: CMakeLists.txt  README
app_fileboxes/src/: CMakeLists.txt  app_fileboxes.desktop  fileboxeswidget.cpp  fileboxeswidget.h  fileboxicon.cpp  fileboxicon.h  fileboxwidget.cpp  fileboxwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
fileboxeshelper/: CMakeLists.txt  fileboxeshelper.kdev4  main.cpp
icons/: CMakeLists.txt
kio_fileboxes/: CMakeLists.txt  README  fileboxes.protocol  kio_fileboxes.cpp  kio_fileboxes.h
libfileboxes/: CMakeLists.txt  box.cpp  box.h  boxesbackend.cpp  boxesbackend.h  boxsettings.h  fb.trig  fileboxes.kdev4  fileboxes.trig  fileboxes_export.h
plasma_fileboxes/: CMakeLists.txt  fileBoxesConfig.ui  filebox.cpp  filebox.h  fileboxicon.cpp  fileboxicon.h  plasma-applet-fileboxes.desktop  plasmafileboxes.cpp  plasmafileboxes.h
service/: CMakeLists.txt  fileboxes-service.desktop
